@@ -68,8 +68,8 @@ public abstract class ConcretePiece implements Piece {
             positionHistory = new ArrayList<>();
             totalDistance = 0;
         } else {
-            Position lastPos = positionHistory.remove(0);
-            this.addToTotalDistance(-(lastPos.manhattanDistanceTo(positionHistory.get(positionHistory.size()-1))));
+            Position lastPos = positionHistory.removeLast();
+            this.addToTotalDistance(-(lastPos.manhattanDistanceTo(positionHistory.getLast())));
         }
     }
 }
